sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Location__c/Inventory_Item_Location__c.object-meta.xml
<CustomObject>
    <label>Inventory Item Location</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Item Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>