sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Location__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Inventory_Item__c</field>
            <operation>equals</operation>
            <valueField>Inventory_Batch__c.Inventory_Item__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Inventory_Batch__c</referenceTo>
    <relationshipLabel>Inventory Item Locations</relationshipLabel>
    <relationshipName>Inventory_Item_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>