sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Location__c/fields/Batch_Active__c.field-meta.xml
<CustomField>
    <fullName>Batch_Active__c</fullName>
    <formula>Batch__r.Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Active</label>
    <type>Checkbox</type>
</CustomField>