sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Location__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <label>Count</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>