sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Location__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <label>Inventory Item</label>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Inventory Item Locations</relationshipLabel>
    <relationshipName>Inventory_Item_Locations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>