sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Location__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inventory Site</label>
    <referenceTo>Inventory_Location__c</referenceTo>
    <relationshipLabel>Inventory Item Locations</relationshipLabel>
    <relationshipName>Inventory_Item_Locations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>