sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Location__c/fields/Location_Description__c.field-meta.xml
<CustomField>
    <fullName>Location_Description__c</fullName>
    <label>Location Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>