sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Location__c/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <label>Location Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>