sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Location__c/fields/Location_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Location_Quantity__c</fullName>
    <label>Location Quantity</label>
    <summarizedField>Item_Location_Lot__c.Quantity__c</summarizedField>
    <summaryForeignKey>Item_Location_Lot__c.Item_Location__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>