sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Location__c/fields/Max_Location_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Max_Location_Quantity__c</fullName>
    <label>Max Location Quantity</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>