sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Location__c/fields/re_order_Level__c.field-meta.xml
<CustomField>
    <fullName>re_order_Level__c</fullName>
    <label>Reorder Level</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>