sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Location__c/fields/re_order_quantity__c.field-meta.xml
<CustomField>
    <fullName>re_order_quantity__c</fullName>
    <label>re-order quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>