sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Location__c/fields/Requires_Batch__c.field-meta.xml
<CustomField>
    <fullName>Requires_Batch__c</fullName>
    <formula>Inventory_Item__r.Batch_Item__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requires Batch</label>
    <type>Checkbox</type>
</CustomField>