sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Inventory_Item__c</columns>
    <columns>NAME</columns>
    <columns>Count__c</columns>
    <columns>Location_Description__c</columns>
    <columns>Location_Name__c</columns>
    <columns>Location_Quantity__c</columns>
    <columns>Max_Location_Quantity__c</columns>
    <columns>re_order_Level__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>